<resources>
    <string name="app_name">MyProject</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>




    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="adhar_no">Adhar No</string>
    <string name="contact_no">Contact Number</string>
    <string name="gender">Gender</string>
    <string name="please_enter">Please Enter </string>
    <string name="city">City</string>
    <string name="age">Age</string>
    <string name="save">Save</string>
    <string name="capture_image">Capture Image</string>











</resources>
